--- a/revizoodle-server/db/docker-compose.yml
+++ b/revizoodle-server/db/docker-compose.yml
@@ -9,8 +9,7 @@ services:
       MYSQL_USER: 'user'
       # You can use whatever password you like
       MYSQL_PASSWORD: '123456'
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      # Just for dev !
       MYSQL_ROOT_HOST: '%'
     ports:
       # <Port exposed> : < MySQL Port running' inside container>
@@ -21,6 +20,7 @@ services:
       # Where our data will be persisted
     volumes:
       - my-db:/var/lib/mysql
+      - ./data:/docker-entrypoint-initdb.d
 # Names our volume
 volumes:
   my-db:
