--- a/revizoodle-server/package.json
+++ b/revizoodle-server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "xml2js": "^0.4.23"
   }
 }
