--- a/revizoodle-client/package.json
+++ b/revizoodle-client/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "uuid": "^3.4.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.5",
+    "vue-cookies": "^1.7.4",
     "vue-mathjax": "^0.0.11",
     "vue-router": "^3.2.0"
   },
