--- a/revizoodle-server/package.json
+++ b/revizoodle-server/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
     "sequelize": "^6.6.5",
+    "uuid": "^8.3.2",
     "xml2js": "^0.4.23"
   }
 }
