--- a/revizoodle-server/package.json
+++ b/revizoodle-server/package.json
@@ -2,8 +2,9 @@
   "name": "revizoodle-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
+    "start": "tsc && node dist/server.js",
     "test": "test"
   },
   "author": "Jean-françois Parmentier",
@@ -20,5 +21,10 @@
     "sequelize": "^6.6.5",
     "uuid": "^8.3.2",
     "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "tslint": "^6.1.3",
+    "typescript": "^4.5.5"
   }
 }
