--- a/revizoodle-server/package.json
+++ b/revizoodle-server/package.json
@@ -23,7 +23,16 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/crypto-js": "^4.1.0",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
+    "@types/nodemon": "^1.19.1",
+    "@types/sequelize": "^4.28.11",
+    "@types/uuid": "^8.3.4",
+    "@types/xml2js": "^0.4.9",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   }
