TypeScript's migration (in progress) - Add a separate resources folder - improve TypeScript config - convert Model to typescript

--- a/revizoodle-server/package.json
+++ b/revizoodle-server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
+    "compile": "tsc",
     "start": "tsc && node dist/server.js",
     "test": "test"
   },
