--- a/revizoodle-server/package.json
+++ b/revizoodle-server/package.json
@@ -30,9 +30,11 @@
     "@types/crypto-js": "^4.1.0",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
+    "@types/node": "^17.0.16",
     "@types/nodemon": "^1.19.1",
     "@types/sequelize": "^4.28.11",
     "@types/uuid": "^8.3.4",
+    "@types/validator": "^13.7.1",
     "@types/xml2js": "^0.4.9",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
