--- a/revizoodle-server/package.json
+++ b/revizoodle-server/package.json
@@ -34,10 +34,12 @@
     "@types/node": "^17.0.16",
     "@types/nodemon": "^1.19.1",
     "@types/sequelize": "^4.28.11",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
     "@types/xml2js": "^0.4.9",
     "jest": "^27.5.1",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
