--- a/revizoodle-server/package.json
+++ b/revizoodle-server/package.json
@@ -5,8 +5,10 @@
   "main": "dist/server.js",
   "scripts": {
     "compile": "tsc",
-    "start": "tsc && node dist/server.js",
-    "test": "test"
+    "dev": "ts-node src/server.ts",
+    "start": "node dist/server.js",
+    "test": "test",
+    "package:prod": "tsc && node build.js"
   },
   "author": "Jean-françois Parmentier",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "fs-extra": "^10.0.1",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
     "sequelize": "^6.6.5",
@@ -36,6 +39,7 @@
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
     "@types/xml2js": "^0.4.9",
+    "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   }
